--- a/StareMedic/Views/Viewers/MedicControll.xaml
+++ b/StareMedic/Views/Viewers/MedicControll.xaml
@@ -2,7 +2,7 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="StareMedic.Views.Viewers.MedicControll"
-             Title="MedicControll">
+             Title="Control Medico">
 
     <Shell.BackButtonBehavior>
         <BackButtonBehavior IsEnabled="False" IsVisible="False" />
@@ -128,7 +128,9 @@
                             </VisualStateGroup>
                         </VisualStateGroupList>
                     </VisualStateManager.VisualStateGroups>
-                
+             
+
+
             </Button>
 
             <Button
@@ -157,6 +159,8 @@
                         </VisualStateGroup>
                     </VisualStateGroupList>
                 </VisualStateManager.VisualStateGroups>
+
+                
             </Button>
 
             <Button
@@ -183,7 +187,20 @@
                         </VisualStateGroup>
                     </VisualStateGroupList>
                 </VisualStateManager.VisualStateGroups>
-                
+
+                <FlyoutBase.ContextFlyout>
+                    <MenuFlyout>
+                        <MenuFlyoutItem 
+                            Text="Addmedic"
+                            x:Name="Addmedic"
+                            Clicked="BtnGuardar_Clicked">
+                            <MenuFlyoutItem.KeyboardAccelerators>
+                                <KeyboardAccelerator Key="Enter" Modifiers="None"/>
+                            </MenuFlyoutItem.KeyboardAccelerators>
+                        </MenuFlyoutItem>
+                    </MenuFlyout>
+                </FlyoutBase.ContextFlyout>
+
             </Button>
 
             <Button 
