--- a/StareMedic/Views/RegisterClinicalCase.xaml
+++ b/StareMedic/Views/RegisterClinicalCase.xaml
@@ -256,6 +256,7 @@
                     Grid.Column="0"
                     
                     Grid.Row="2"
+                    Margin="0,0,20,0"
                     Style="{StaticResource labelEntry}"/>
 
                 <DatePicker 
