--- a/StareMedic/Views/Viewers/SpinnerPopup.xaml
+++ b/StareMedic/Views/Viewers/SpinnerPopup.xaml
@@ -6,15 +6,19 @@
     xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
     CanBeDismissedByTappingOutsideOfPopup="False"
     Color="Transparent">
+
+   
+    
     <VerticalStackLayout>
         <ActivityIndicator IsRunning="True" 
-                           Color="OrangeRed"
+                           Color="#7743DB"
                            WidthRequest="69"
                            HeightRequest="69"
                            HorizontalOptions="Center"
                            VerticalOptions="Center"/>
+        
         <Label Text="Procesando..."
-               TextColor="Red"
+               TextColor="#C3ACD0"
                FontSize="Medium"/>
     </VerticalStackLayout>
 </toolkit:Popup>
